# email_provider_validator

./: CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs
.github/workflows/: build.yml
input/: disposable_emails.csv  example_emails.csv  free_emails.csv
output/: disposable.csv  free.csv
src/: lib.rs
